Add basic sunburst chart

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <title>Portland D3 Charts</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="js/sunburst.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-  
+    <div id="sunburst"></div>
+
+    <!--<script>
+      $(function(){
+        sunburst();
+      });
+    </script>-->
   </body>
 </html>
