Update sunburst transition and center, begin adding food cart pod info

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
       <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
 
     </div>
-    <div id="sunburst"></div>
-
-    <!--<script>
-      $(function(){
-        sunburst();
-      });
-    </script>-->
+    <div class="foodCarts">
+      <h1>Portland's Food Cart Pods</h1>
+      <svg id="foodCartGraph"></svg>
+    </div>
     <div class="beer">
       <h1>
         Portland's Most Popular Brew Style
