Fix merge conflicts, update index, redo food cart data with region

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </div>
     <div class="foodCarts">
       <h1>Portland's Food Cart Pods</h1>
+      <h3>Hover over an arc to see the food pod/food cart name</h3>
+      <h3>Click a food pod to see an expanded view of the carts at that location</h3>
       <svg id="foodCartGraph"></svg>
     </div>
     <div class="beer">
