--- a/pie.html
+++ b/pie.html
@@ -4,6 +4,10 @@
   <link href="style.css" rel="stylesheet">
   <title>Art by Media</title>
 </head>
-<svg width="960" height="500"></svg>
+<svg width="460" height="500"></svg>
+
+ <div id="pieChart"></div>
+
 <script src="https://d3js.org/d3.v4.min.js"></script>
- <script type="text/javascript" src="pie2.js"></script>
+<script src="d3pie.min.js"></script>
+ <script type="text/javascript" src="pie.js"></script>
