--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="d3pie.min.js"></script>
     <script src="js/beer.js"></script>
     <script src="js/sunburst.js"></script>
+
 
   </head>
   <body>
@@ -41,5 +43,13 @@
 
       </div>
     </div>   <!--End Beer-->
+
+    <!-- Start Pie -->
+    <div class="pie">
+     <div id="pie"></div>
+
+
+     <script type="text/javascript" src="js/pie.js"></script>
+      </div> <!-- end pie -->
   </body>
 </html>
