resolve merge conflicts

--- a/index.html
+++ b/index.html
@@ -24,8 +24,77 @@
       </h1>
       <br>
       <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
-
     </div>
+    <div id="teamDiv">
+      <h3 class="center-align">The Team</h3>
+      <div class="flip3D">
+        <div class="back" id="card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back" id="card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="flip3D">
+        <div class="back" id="card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back" id="card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="flip3D">
+        <div class="back card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="flip3D">
+        <div class="back card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="flip3D">
+        <div class="back card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="flip3D">
+        <div class="back card2back">
+          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+        </div>
+
+        <div class="front">
+          <div class="back card2back">
+            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
     <div class="foodCarts">
       <h1>Portland's Food Cart Pods</h1>
       <h3>Hover over an arc to see the food pod/food cart name</h3>
@@ -37,9 +106,9 @@
         Portland's Most Popular Brew Style
       </h1>
       <h3>What do you think is Portland's prominent beer?</h3>
-      <h4><span class="beerResults">Select a style to see the results.</span></h4>
       <div class="beerGraph">
-        <svg id = "beerSvg" width="960" height="700"></svg>
+        <svg id = "beerSvg" width="960" height="550"></svg>
+        <h5><span class="beerResults">Select a style to see the results.</span></h5>
 
       </div>
     </div>   <!--End Beer-->
