add footer and changed team section

--- a/index.html
+++ b/index.html
@@ -17,108 +17,131 @@
 
   </head>
   <body>
-    <div class="row center-align" id="pageHeader">
-      <br>
-      <h1>
-        Run the Numbers PDX
-      </h1>
-      <br>
-      <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
-    </div>
-    <div id="teamDiv">
-      <h3 class="center-align">The Team</h3>
-      <div class="flip3D">
-        <div class="back" id="card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
+    <header>
 
-        <div class="front">
+      <div class="row center-align" id="pageHeader">
+        <br>
+        <h1>
+          Run the Numbers PDX
+        </h1>
+        <br>
+        <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
+      </div>
+      <div class="row" id="teamRow">
+
+      <div id="teamDiv">
+        <h3 class="center-align">Team D3</h3>
+        <div class="flip3D">
           <div class="back" id="card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+          </div>
+
+          <div class="front">
+            <div class="back" id="card2back">
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flip3D">
-        <div class="back" id="card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
-
-        <div class="front">
+        <div class="flip3D">
           <div class="back" id="card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+          </div>
+
+          <div class="front">
+            <div class="back" id="card2back">
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flip3D">
-        <div class="back card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
-
-        <div class="front">
+        <div class="flip3D">
           <div class="back card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+          </div>
+
+          <div class="front">
+            <div class="back card2back">
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flip3D">
-        <div class="back card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
-
-        <div class="front">
+        <div class="flip3D" id="secondLineImage">
           <div class="back card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+          </div>
+
+          <div class="front">
+            <div class="back card2back">
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flip3D">
-        <div class="back card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
-
-        <div class="front">
+        <div class="flip3D">
           <div class="back card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+          </div>
+
+          <div class="front">
+            <div class="back card2back">
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="flip3D">
-        <div class="back card2back">
-          <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
-        </div>
+      <br>
 
-        <div class="front">
-          <div class="back card2back">
-            <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
-          </div>
-        </div>
+    </div>  <!-- end row -->
+    </header>
+    <main class="container center-align">
+      <div class="foodCarts">
+        <h1>Portland's Food Cart Pods</h1>
+        <h3>Hover over an arc to see the food pod/food cart name</h3>
+        <h3>Click a food pod to see an expanded view of the carts at that location</h3>
+        <svg id="foodCartGraph"></svg>
       </div>
-    </div>
-    <br>
-    <div class="foodCarts">
-      <h1>Portland's Food Cart Pods</h1>
-      <h3>Hover over an arc to see the food pod/food cart name</h3>
-      <h3>Click a food pod to see an expanded view of the carts at that location</h3>
-      <svg id="foodCartGraph"></svg>
-    </div>
-    <div class="beer">
-      <h1>
-        Portland's Most Popular Brew Style
-      </h1>
-      <h3>What do you think is Portland's prominent beer?</h3>
-      <div class="beerGraph">
-        <svg id = "beerSvg" width="960" height="550"></svg>
-        <h5><span class="beerResults">Select a style to see the results.</span></h5>
+      <div class="beer">
+        <h1>
+          Portland's Most Popular Brew Style
+        </h1>
+        <h3>What do you think is Portland's prominent beer?</h3>
+        <div class="beerGraph">
+          <svg id = "beerSvg" width="960" height="550"></svg>
+          <h5><span class="beerResults">Select a style to see the results.</span></h5>
 
-      </div>
-    </div>   <!--End Beer-->
+        </div>
+      </div>   <!--End Beer-->
 
-    <!-- Start Pie -->
-    <div class="pie">
-     <div id="pie"></div>
+      <!-- Start Pie -->
+      <div class="pie">
+       <div id="pie"></div>
 
 
-     <script type="text/javascript" src="js/pie.js"></script>
+       <script type="text/javascript" src="js/pie.js"></script>
       </div> <!-- end pie -->
+    </main>
+    <footer class="page-footer black">
+       <div class="container">
+         <div class="row">
+           <div class="col l6 s12">
+             <h5 class="white-text">Footer Content</h5>
+             <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+           </div>
+           <div class="col l4 offset-l2 s12">
+             <h5 class="white-text">Links</h5>
+             <ul>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+               <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+             </ul>
+           </div>
+         </div>
+       </div>
+       <div class="footer-copyright">
+         <div class="container">
+         © 2014 Copyright Text
+         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+         </div>
+       </div>
+     </footer>
   </body>
 </html>
