--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-
+    <link rel="icon" href="./assets/img/d3.png">
     <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
@@ -13,12 +13,9 @@
     <script src="d3pie.min.js"></script>
     <script src="js/beer.js"></script>
     <script src="js/sunburst.js"></script>
-
-
   </head>
   <body>
     <header>
-
       <div class="row center-align" id="pageHeader">
         <br>
         <h1>
