--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
              <ul>
                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+               <li><a class="grey-text text-lighten-3" href="http://www.portlandbeer.org/beer/styles">PortlandBeer.org</a></li>
                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
              </ul>
            </div>
