change back side of images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <h3 class="center-align">Team D3</h3>
         <div class="flip3D">
           <div class="back" id="card2back">
-            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+            <div class="backOfCard">
+              <h6><strong>First Last Name</strong></h6>
+              <h6>Title</h6>
+            </div>
           </div>
 
           <div class="front">
@@ -44,7 +47,10 @@
         </div>
         <div class="flip3D">
           <div class="back" id="card2back">
-            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+            <div class="backOfCard">
+              <h6><strong>First Last Name</strong></h6>
+              <h6>Title</h6>
+            </div>
           </div>
 
           <div class="front">
@@ -55,7 +61,10 @@
         </div>
         <div class="flip3D">
           <div class="back card2back">
-            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+            <div class="backOfCard">
+              <h6><strong>First Last Name</strong></h6>
+              <h6>Title</h6>
+            </div>
           </div>
 
           <div class="front">
@@ -66,7 +75,10 @@
         </div>
         <div class="flip3D" id="secondLineImage">
           <div class="back card2back">
-            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+            <div class="backOfCard">
+              <h6><strong>First Last Name</strong></h6>
+              <h6>Title</h6>
+            </div>
           </div>
 
           <div class="front">
@@ -77,7 +89,10 @@
         </div>
         <div class="flip3D">
           <div class="back card2back">
-            <a href="http://imgur.com/nA4laqd"><img src="http://lorempixel.com/200/200/" title="source: imgur.com" /></a>
+            <div class="backOfCard">
+              <h6><strong>First Last Name</strong></h6>
+              <h6>Title</h6>
+            </div>
           </div>
 
           <div class="front">
@@ -99,9 +114,9 @@
       </div>
       <div class="beer">
         <h1>
-          Portland's Most Popular Brew Style
+          Most Popular Brew Style
         </h1>
-        <h3>What do you think is Portland's prominent beer?</h3>
+        <h3>What do you think is Portland's most prominent beer?</h3>
         <div class="beerGraph">
           <svg id = "beerSvg" width="960" height="550"></svg>
           <h5><span class="beerResults">Select a style to see the results.</span></h5>
