--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Portland D3 Charts</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <link rel="icon" href="./assets/img/d3.png">
-    <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
-    <script src="d3pie.min.js"></script>
-    <script src="js/beer.js"></script>
-    <script src="js/sunburst.js"></script>
-    <script src="js/bubble_chart.js"></script>
-  </head>
-  <body>
-    <header>
-      <div class="row center-align" id="pageHeader">
-        <br>
-        <h1>
+
+<head>
+  <title>Portland D3 Charts</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  <link rel="icon" href="./assets/img/d3.png">
+  <link rel="stylesheet" href="/css/styles.css" media="screen" charset="utf-8">
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+  <script src="d3pie.min.js"></script>
+  <script src="js/beer.js"></script>
+  <script src="js/sunburst.js"></script>
+  <script src="js/bubble_chart.js"></script>
+</head>
+
+<body>
+  <header>
+    <div class="row center-align" id="pageHeader">
+      <br>
+      <h1>
           Run the Numbers PDX
         </h1>
-        <br>
-        <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
-      </div>
-      <div class="row" id="teamRow">
+      <br>
+      <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
+    </div>
+    <div class="row" id="teamRow">
 
       <div id="teamDiv">
         <h3 class="center-align">Team D3</h3>
@@ -103,79 +106,352 @@
         </div>
       </div>
       <br>
-    </div>  <!-- end row -->
-    </header>
-    <main class="container center-align">
-      <div class="foodCarts">
-        <h1>Portland's Food Cart Pods</h1>
-        <h3>Hover over an arc to see the food pod/food cart name</h3>
-        <h3>Click a food pod to see an expanded view of the carts at that location</h3>
-        <svg id="foodCartGraph"></svg>
-      </div>
-      <div class="beer">
-        <h1>
+    </div>
+    <!-- end row -->
+  </header>
+  <main class="container center-align">
+    <div class="foodCarts">
+      <h1>Portland's Food Cart Pods</h1>
+      <h3>Hover over an arc to see the food pod/food cart name</h3>
+      <h3>Click a food pod to see an expanded view of the carts at that location</h3>
+      <svg id="foodCartGraph"></svg>
+    </div>
+    <div class="beer">
+      <h1>
           Most Popular Brew Style
         </h1>
-        <h3>What do you think is Portland's most prominent beer?</h3>
-        <div class="beerGraph">
-          <svg id = "beerSvg" width="960" height="550"></svg>
-          <h5><span class="beerResults">Select a style to see the results.</span></h5>
+      <h3>What do you think is Portland's most prominent beer?</h3>
+      <div class="beerGraph">
+        <svg id="beerSvg" width="960" height="550"></svg>
+        <h5><span class="beerResults">Select a style to see the results.</span></h5>
 
-        </div>
-      </div>   <!--End Beer-->
+      </div>
+    </div>
+    <!--End Beer-->
 
-      <!-- Start Pie -->
-      <div class="pie">
-       <div id="pie"></div>
+    <!-- Start Pie -->
+    <div class="pie">
+      <div id="pie"></div>
 
 
-       <script type="text/javascript" src="js/pie.js"></script>
-      </div> <!-- end pie -->
-      <div class="bubbleChart">
-        <h1>Oregon Wine Grapes by Variety: Annual Tons Harvested</h1>
-        <div class="chart-example" id="chart"><svg></svg>
-        </div>
-        <script>
-        d3.csv(src="/bubble_chart.csv", function(error, data) {
+      <script type="text/javascript" src="js/pie.js"></script>
+    </div>
+    <!-- end pie -->
+    <div class="bubbleChart">
+      <h1>Oregon Wine Grapes by Variety: Annual Tons Harvested</h1>
+      <div class="chart-example" id="chart"><svg></svg>
+      </div>
+      <script>
+        d3.csv(src = "/bubble_chart.csv", function(error, data) {
           if (error) {
-              console.error('Error getting or parsing the data.');
-              throw error;
+            console.error('Error getting or parsing the data.');
+            throw error;
           }
           var chart = bubbleChart().width(768).height(550);
           d3.select('#chart').data(data).call(chart);
         });
-        </script>
-      </div> <!-- end bubble chart -->
-    </main>
-    <footer class="page-footer black">
-       <div class="container">
-         <div class="row">
-           <div class="col l6 s12">
-             <h5 class="white-text">Technologies Used</h5>
-             <ul>
-               <li><a class="grey-text text-lighten-3" href="https://d3js.org/">D3</a></li>
-               <li><a class="grey-text text-lighten-3" href="https://jquery.com/">JQuery</a></li>
-               <li><a class="grey-text text-lighten-3" href="https://www.javascript.com/">JavaScript</a></li>
-               <li><a class="grey-text text-lighten-3" href="http://materializecss.com/">Materialize CSS</a></li>
-             </ul>
-           </div>
-           <div class="col l4 offset-l2 s12">
-             <h5 class="white-text">Sources</h5>
-             <ul>
-               <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-               <li><a class="grey-text text-lighten-3" href="http://www.portlandbeer.org/beer/styles">PortlandBeer.org</a></li>
-               <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-             </ul>
-           </div>
-         </div>
-       </div>
-       <div class="footer-copyright">
-         <div class="container">
-         © 2014 Copyright Text
-         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-         </div>
-       </div>
-     </footer>
-  </body>
+      </script>
+    </div>
+    <!-- end bubble chart -->
+
+
+
+
+
+    <div id="niggaLee" class="container">
+
+      <h2>Oregon Household Income by Race</h2>
+      <div id="key" class="row">
+        <ul>
+          <li>
+            <div id="box" style="background-color: yellow"></div>
+            <p>White Resident</p>
+          </li>
+          <li>
+            <div id="box" style="background-color: red"></div>
+            <p>African American Resident</p>
+
+          </li>
+          <li>
+            <div id="box" style="background-color: blue"></div>
+            <p>Asian American Resident</p>
+
+          </li>
+          <li>
+            <div id="box" style="background-color: green"></div>
+            <p>Hispanic Resident</p>
+
+          </li>
+
+        </ul>
+      </div>
+
+
+
+      <div class="radarChart"></div>
+
+      <script src="js/radarChart.js"></script>
+      <script>
+        var margin = {
+            top: 100,
+            right: 100,
+            bottom: 100,
+            left: 100
+          },
+          width = Math.min(700, window.innerWidth - 10) - margin.left - margin.right,
+          height = Math.min(width, window.innerHeight - margin.top - margin.bottom - 20);
+
+        //////////////////////////////////////////////////////////////
+        ////////////////////////// Data //////////////////////////////
+        //////////////////////////////////////////////////////////////
+
+        var data = [
+          [ //Portland
+            {
+              axis: "Less than 10k",
+              value: 0.064,
+              group: "White Resident"
+            },
+            {
+              axis: "10k to 30k",
+              value: 0.205,
+              group: "White Resident"
+            },
+
+            {
+              axis: "30k to 50k",
+              value: 0.191,
+              group: "White Resident"
+            },
+
+            {
+              axis: "50k to 75k",
+              value: 0.185,
+              group: "White Resident"
+            },
+            {
+              axis: "75k to 100k",
+              value: 0.128,
+              group: "White Resident"
+
+            },
+            {
+              axis: "100k to 125k",
+              value: 0.081,
+              group: "White Resident"
+            },
+            {
+              axis: "125k to 150k",
+              value: 0.053,
+              group: "White Resident"
+            },
+            {
+              axis: "150k to 200k",
+              value: 0.046,
+              group: "White Resident"
+            },
+            {
+              axis: "More than 200k ",
+              value: 0.046,
+              group: "White Resident"
+            }
+
+          ],
+          [ //"African American Resident"
+            {
+              axis: "Less than 10k",
+              value: 0.17,
+              group: "African American Resident"
+            },
+            {
+              axis: "10k to 30k",
+              value: 0.30,
+              group: "African American Resident"
+            },
+            {
+              axis: "30k to 50k",
+              value: 0.16,
+              group: "African American Resident"
+            },
+            {
+              axis: "50k to 75k",
+              value: 0.14,
+              group: "African American Resident"
+            },
+            {
+              axis: "75k to 100k",
+              value: 0.07,
+              group: "African American Resident"
+            },
+            {
+              axis: "100k to 125k",
+              value: 0.05,
+              group: "African American Resident"
+            },
+            {
+              axis: "125k to 150k",
+              value: 0.02,
+              group: "African American Resident"
+            },
+            {
+              axis: "150k to 200k",
+              value: 0.02,
+              group: "African American Resident"
+            },
+            {
+              axis: "More than 200k",
+              value: 0.029,
+              group: "African American Resident"
+            }
+
+          ],
+          [ //Asian American Resident
+            {
+              axis: "Less than 10k",
+              value: 0.09,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "10k to 30k",
+              value: 0.135,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "30k to 50k",
+              value: 0.137,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "50k to 75k",
+              value: 0.152,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "75k to 100k",
+              value: 0.142,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "100k to 125k",
+              value: 0.108,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "125k to 150k",
+              value: 0.059,
+              group: "Asian American Resident"
+            },
+            {
+              axis: "150k to 200k",
+              value: 0.07
+            },
+            {
+              axis: "More than 200k",
+              value: 0.104,
+              group: "Asian American Resident"
+            }
+
+          ],
+          [ //Hispanic Resident
+            {
+              axis: "Less than 10k",
+              value: 0.06,
+              group: "Hispanic Resident"
+            },
+
+            {
+              axis: "10k to 30k",
+              value: 0.168,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "30k to 50k",
+              value: 0.226,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "50k to 75k",
+              value: 0.217,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "75k to 100k",
+              value: 0.11,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "100k to 125k",
+              value: 0.06,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "125k to 150k",
+              value: 0.025,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "150k to 200k",
+              value: 0.02,
+              group: "Hispanic Resident"
+            },
+            {
+              axis: "More than 200k",
+              value: 0.013,
+              group: "Hispanic Resident"
+            }
+          ]
+        ];
+        //////////////////////////////////////////////////////////////
+        //////////////////// Draw the Chart //////////////////////////
+        //////////////////////////////////////////////////////////////
+
+        var color = d3.scale.ordinal()
+          .range(["#EDC951", "#CC333F", "#00A0B0", "#7cc136"]);
+
+        var radarChartOptions = {
+          w: width,
+          h: height,
+          margin: margin,
+          maxValue: 0.3,
+          levels: 5,
+          roundStrokes: true,
+          color: color
+        };
+        //Call function to draw the Radar chart
+        RadarChart(".radarChart", data, radarChartOptions);
+      </script>
+    </div>
+  </main>
+  <footer class="page-footer black">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Technologies Used</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="https://d3js.org/">D3</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://jquery.com/">JQuery</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.javascript.com/">JavaScript</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://materializecss.com/">Materialize CSS</a></li>
+          </ul>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Sources</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://www.portlandbeer.org/beer/styles">PortlandBeer.org</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
