--- a/index.html
+++ b/index.html
@@ -160,32 +160,19 @@
 
     <div id="niggaLee" class="container">
 
+
+
       <h2>Oregon Household Income by Race</h2>
-      <div id="key" class="row">
-        <ul>
-          <li>
-            <div id="box" style="background-color: yellow"></div>
-            <p>White Resident</p>
-          </li>
-          <li>
-            <div id="box" style="background-color: red"></div>
-            <p>African American Resident</p>
-
-          </li>
-          <li>
-            <div id="box" style="background-color: blue"></div>
-            <p>Asian American Resident</p>
-
-          </li>
-          <li>
-            <div id="box" style="background-color: green"></div>
-            <p>Hispanic Resident</p>
-
-          </li>
-
-        </ul>
+      <div class='my-legend'>
+        <div class='legend-scale'>
+          <ul class='legend-labels'>
+            <li><span style='background:#FFFFB3;'></span>White Resident</li>
+            <li><span style='background:#FB8072;'></span>African American Resident</li>
+            <li><span style='background:#4286f4;'></span>Asian American Resident</li>
+            <li><span style='background:#19e58c;'></span>Hispanic Resident</li>
+          </ul>
+        </div>
       </div>
-
 
 
       <div class="radarChart"></div>
