--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.6.0/d3.min.js"></script>
+  <script src="http://d3js.org/queue.v1.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+
   <script src="d3pie.min.js"></script>
   <script src="js/beer.js"></script>
   <script src="js/sunburst.js"></script>
@@ -154,7 +157,63 @@
     </div>
     <!-- end bubble chart -->
 
+<!-- Map -->
+<script>
 
+var width = 740,
+    height = 700;
+
+var projection = d3.geoConicConformal()
+    .rotate([120.67, -45.52])
+    .parallels([44, 46])
+    .scale(125000)
+    .center([-1.388, 0.04])
+    .translate([width / 2, height / 2]);
+
+var path = d3.geoPath()
+    .projection(projection);
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+
+svg.append("rect")
+    .attr("class", "background")
+    .attr("width", width)
+    .attr("height", height);
+
+queue()
+    .defer(d3.json, "neighborhoods.topo.json")
+    .defer(d3.json, "points.json")
+    .defer(d3.json, "labels_overlap.topo.json")
+    .defer(d3.json, "labels.topo.json")
+    .await(makeMap);
+
+function makeMap(error, hoods, points, overlap, labels) {
+
+  neighborhoods = topojson.feature(hoods, hoods.objects.neighborhoods)
+  dymo_overlapping_labels = topojson.feature(overlap, overlap.objects.labels_overlap)
+  dymo_labels = topojson.feature(labels, labels.objects.labels)
+
+  //Neighborhood outlines
+  svg.append("g")
+      .attr("class", "neighborhoods")
+    .selectAll("path")
+      .data(neighborhoods.features)
+    .enter().append("path")
+      .attr("d", path)
+
+  //Append Dymo points
+  svg.selectAll(".symbol")
+      .data(points.features)
+    .enter().append("path")
+      .attr("class", "symbol")
+      .attr("d", path.pointRadius(2));
+
+  }
+
+</script>
+<!--  End Map -->
 
 
 
