Update sunburst title to be bigger, finish north portland food carts

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="foodCarts container">
         <h1>Portland's Food Cart Pods</h1>
         <h4>Click a pod to see an expanded view of the carts at that location. Hover over an arc to see the food pod or food cart name.</h4>
-        <div id="foodCartTitle"></div>
+        <h4 id="foodCartTitle"></h4>
         <svg id="foodCartGraph"></svg>
       </div> <!--end food carts -->
 
