add team photos

--- a/index.html
+++ b/index.html
@@ -40,70 +40,70 @@
         <div class="flip3D">
           <div class="back" id="card2back">
             <div class="backOfCard">
-              <h6><strong>First Last Name</strong></h6>
-              <h6>Title</h6>
+              <h6><strong>Blake Womack</strong></h6>
+              <h6>Wine Bubbles</h6>
             </div>
           </div>
 
           <div class="front">
             <div class="back" id="card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+              <a href="https://www.linkedin.com/in/blake-womack-59b02336/"><img src="/assets/img/Blake.jpg" alt="Profession Photo of Blake Womack"></a>
             </div>
           </div>
         </div>
         <div class="flip3D">
           <div class="back" id="card2back">
             <div class="backOfCard">
-              <h6><strong>First Last Name</strong></h6>
-              <h6>Title</h6>
+              <h6><strong>Chris Wainner</strong></h6>
+              <h6>Food Cart Starburst</h6>
             </div>
           </div>
 
           <div class="front">
             <div class="back" id="card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+              <a href=""><img src="/assets/img/Chris.jpg" alt="Profession Photo of Chris Wainner" width="200"></a>
             </div>
           </div>
         </div>
         <div class="flip3D">
           <div class="back card2back">
             <div class="backOfCard">
-              <h6><strong>First Last Name</strong></h6>
-              <h6>Title</h6>
+              <h6><strong>Kaya Winn</strong></h6>
+              <h6>Art Pie & Map</h6>
             </div>
           </div>
 
           <div class="front">
             <div class="back card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+              <a href=""><img src="/assets/img/Kaya.png" alt="Profession Photo of Kaya Winn" width="200"></a>
             </div>
           </div>
         </div>
         <div class="flip3D" id="secondLineImage">
           <div class="back card2back">
             <div class="backOfCard">
-              <h6><strong>First Last Name</strong></h6>
-              <h6>Title</h6>
+              <h6><strong>Stormi Hoebelheinrich</strong></h6>
+              <h6>Beer Graph</h6>
             </div>
           </div>
 
           <div class="front">
             <div class="back card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+              <a href=""><img src="/assets/img/Stormi.jpg" alt="Profession Photo of Stormi Hoebelheinrich" width="200"></a>
             </div>
           </div>
         </div>
         <div class="flip3D">
           <div class="back card2back">
             <div class="backOfCard">
-              <h6><strong>First Last Name</strong></h6>
+              <h6><strong>Alex Lee</strong></h6>
               <h6>Title</h6>
             </div>
           </div>
 
           <div class="front">
             <div class="back card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" title="source: imgur.com" /></a>
+              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" alt="Profession Photo of Alex Lee"  width="200"></a>
             </div>
           </div>
         </div>
