raceIncome before merging

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           <div class="front">
             <div class="back card2back">
-              <a href="http://imgur.com/uScQ0FI"><img src="http://lorempixel.com/200/200/sports/" alt="Profession Photo of Alex Lee"  width="200"></a>
+              <a href="http://imgur.com/uScQ0FI"><img src="/assets/img/Alex.jpg" alt="Profession Photo of Alex Lee"  width="200"></a>
             </div>
           </div>
         </div>
