add yellow background to beer

--- a/index.html
+++ b/index.html
@@ -120,23 +120,24 @@
         <svg id="foodCartGraph"></svg>
       </div> <!--end food carts -->
 
-
-      <div class="beer container">
-        <h1>
-          Beer in Portland
-        </h1>
-      <h4>What do you think is Portland's most prominent style of beer?</h4>
-      <div class="beerGraph">
-        <svg id="beerSvg" width="960" height="550"></svg>
-        <h5><span class="beerResults">Select a style to see the results.</span></h5>
+    <div id="colorStripe">
+        <div class="beer container">
+          <h1>
+            Beer in Portland
+          </h1>
+        <h4>What do you think is Portland's most prominent style of beer?</h4>
+        <div class="beerGraph">
+          <svg id="beerSvg" width="960" height="550"></svg>
+          <h5><span class="beerResults">Select a style to see the results.</span></h5>
+        </div>
       </div>
     </div>
-    <!--End Beer-->
+<!--End Beer-->
 
     <!-- Start Pie -->
 
     <div class="pie row">
-      <div id="pie" class="col s6"></div>
+      <div id="pie" class="col s6 right-align"></div>
       <div id="artMap" class="col s6"></div>
 
 
