adds text to pie-maps

--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
 <!--End Beer-->
 
     <!-- Start Pie -->
-
+<hr>
     <div class="pie row">
-      <div id="pie" class="col s6 right-align"></div>
-      <div id="artMap" class="col s6"></div>
+      <div id="pie" class="col s6 right-align">
+      <p id="pieText">The Portland Public Art Committee commissions art that engages with the surrounding environment to create, enrich, or reveal a sense of place, and to express the spirit, values, visions and poetry of place that collectively define Portland.  The media types of Portland public art is illustrated here.</p></div>
+
+      <div id="artMap" class="col s6"><p id="pieText">As mediators between an inner mental world and an outer physical world, maps are fundamental tools helping the human mind make sense of its universe at various scales. More-over, they are undoubtedly one of the oldest forms of human communication. This map of Multnomah County, comprised of smaller neighborhoods outlines, shows the locations of commission funded art installations. </p></div>
 
 
       <script type="text/javascript" src="js/pie.js"></script>
